--- a/.github/workflows/Rockchip-OpenWrt.yml
+++ b/.github/workflows/Rockchip-OpenWrt.yml
@@ -1,9 +1,8 @@
 name: Rockchip OpenWrt
 
 on:
-  workflow_dispatch:
-  schedule:
-    - cron: 0 18 * * *
+  push:
+    branches: ["main"]
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
